add sentence page and service

--- a/JapneseLearning/src/app/app.component.html
+++ b/JapneseLearning/src/app/app.component.html
@@ -6,6 +6,9 @@
   <mat-tab label="Error List">
     <app-error-list></app-error-list>
   </mat-tab>
+  <mat-tab label="Sentenes List">
+    <app-error-list></app-error-list>
+  </mat-tab>
   <mat-tab label="Second">
     <app-word-format></app-word-format>
   </mat-tab>
