--- a/JapneseLearning/src/app/word-list/error-list/error-list.component.html
+++ b/JapneseLearning/src/app/word-list/error-list/error-list.component.html
@@ -5,6 +5,7 @@
 </mat-list>
 <div class="display-container" >
     <button mat-raised-button color="primary" id="switch" (click)="onSwitchQuestionResult()">switch</button>
+    <button mat-raised-button color="primary" id="display" (click)="onReset()">reset</button>
     <button mat-raised-button color="primary" class="display-button" id="display"(click)="onDisplayResult()">display/Hide</button>
 
 </div>
