add sentence list

--- a/JapneseLearning/src/app/app.component.html
+++ b/JapneseLearning/src/app/app.component.html
@@ -7,7 +7,7 @@
     <app-error-list></app-error-list>
   </mat-tab>
   <mat-tab label="Sentenes List">
-    <app-error-list></app-error-list>
+    <app-sentences-list></app-sentences-list>
   </mat-tab>
   <mat-tab label="Second">
     <app-word-format></app-word-format>
