Add mysql service

--- a/JapneseLearning/src/app/word-list/word-format/word-format.component.html
+++ b/JapneseLearning/src/app/word-list/word-format/word-format.component.html
@@ -1,4 +1,5 @@
 <p>word-format works!</p>
+<button mat-raised-button color="primary" id="format" (click)="onInsert()">Insert</button>
 <textarea matInput [(ngModel)]="test"></textarea>
 <button mat-raised-button color="primary" id="format" (click)="onformat()">format</button>
 <button mat-raised-button color="primary" id="format" (click)="onJapaneseSentencesFormat()">Japanese Sentenes format</button>
