--- a/JapneseLearning/src/app/word-list/word-list-layout/word-list-layout.component.css
+++ b/JapneseLearning/src/app/word-list/word-list-layout/word-list-layout.component.css
@@ -21,7 +21,17 @@
 
 .display-button {
   position: absolute;
-  top: 49%;
+  top: 100%;
+  left: 10%;
+}
+.reset-button {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+}
+.switch-button {
+  position: absolute;
+  top: 55%;
   left: 10%;
 }
 
