--- a/JapneseLearning/src/app/app.component.html
+++ b/JapneseLearning/src/app/app.component.html
@@ -12,6 +12,12 @@
   <mat-tab label="Sentenes List">
     <app-sentences-list></app-sentences-list>
   </mat-tab>
+  <mat-tab label="Kana List">
+    <app-kana-list></app-kana-list>
+  </mat-tab>
+  <mat-tab label="Words Maintenance">
+    <app-word-maintenance></app-word-maintenance>
+  </mat-tab>
   <mat-tab label="Second">
     <app-word-format></app-word-format>
   </mat-tab>
